<resources>
    <string name="app_name">MFKids</string>
    <string name="home_title">Home</string>

    <string name="menu_add">ADD KID</string>
    <string name="title_activity_add_kid">Add Kid</string>
    <string name="name_of_kid">Name of Kid</string>
    <string name="dob_of_kid">Date of Birth</string>
    <string name="gender_of_kid">Gender</string>
    <string name="gender_male">Male</string>
    <string name="gender_female">Female</string>
    <string name="select_date">Select Date</string>

    <string name="kid_milestones_title">Kid Milestones</string>
    <string name="add_milestone_title">Add Milestone</string>

</resources>
