<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.febi.mfkids.AddKidActivity"
    tools:showIn="@layout/activity_add_kid"
    android:padding="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name_of_kid"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/id_kid_name"
        android:inputType="textCapWords"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/gender_of_kid"
        android:layout_marginTop="12dp"/>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/id_gender_radio_group"
        android:padding="12dp"
        android:checkedButton="@+id/id_gender_male_radio_button">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gender_male"
            android:id="@+id/id_gender_male_radio_button"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gender_female"
            android:id="@+id/id_gender_female_radio_button"/>

    </RadioGroup>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dob_of_kid"
        android:layout_marginTop="12dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/id_select_date_text"
        android:text="@string/select_date"
        android:layout_margin="8dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/id_add_kid_button"
        android:layout_margin="16dp"
        android:padding="8dp"
        android:text="@string/title_activity_add_kid"/>

</LinearLayout>
